--- a/data_entry/templates/data_entry/home.html
+++ b/data_entry/templates/data_entry/home.html
@@ -21,42 +21,49 @@
 </head>
 <body>
     <div class="topbar"></div>
-<div class="container">
+<div class="container" >
 
 <div class="row">
-<div class="col-md-2 " >
+<div class="col-md-4 col-xs-4 col-sm-4" >
 	<img id="tu_logo" src="{% static 'dataEntry/images/tulogo.png' %}" height="70em" alt="Tu logo"/>	
 </div>
-  <div class="col-md-10" id="page-header">
+  <div class="col-md-8 col-xs-8 col-sm-8" id="page-header">
 	  <h2><center>Department of Electronics and Computer Engineering</center></h2>
 	  <h4><center>Pulchowk Campus, Institute of Engineering, Tribhuvan University</center></h4>
   </div> 
 </div>
 
 <nav class="navbar navbar-inverse" >
-  <div class="container-fluid" id="navv">
-
-    <ul class="nav navbar-nav">
+  <div class="container-fluid nav navbar-nav" id="navv" >
+    <!-- <div class="nav navbar-nav"> -->
 {% block content %}
-<form class="navbar-form navbar-left" method="post" novalidate>
+<form class="navbar-form " method="post" novalidate style="width:100%; height: 100%">
     {% csrf_token %}
     {% for k,v in form.items %}
-      <li class="active" style="display: inline-table; width: 150px;">
-        <select id={{v.0}} name={{v.0}} value={{v.0}}>
-        {% for items in v %}
-        <option name="{{items}}" value="{{items}}">{{items}}</option>
+      <div class="col-md-2 col-xs-2 col-sm-2 active">
+      <!-- <div class="active" style="display: inline-table;"> -->
+        <center>
+        <!-- <select id={{v.0}} name={{v.0}} value={{v.0}} type="submit" style="font-size: 15px; font-weight: bold; margin: 5%;"> -->
+        <select id={{v.header}} name={{v.header}} value={{v.header}} type="submit" style="font-size: 15px; font-weight: bold; margin: 5%;">
+
+        {% for items_key, items in v.items %}
+        <option name="{{items}}" value="{{items}}" style="font-size: 14px;">{{items}}</option>
         {% endfor %}
         </select>
-    </ul>
-  </li>
+      </center>
+      </div>
+    <!-- </div> -->
       {% endfor %}
-   
 
-    <button type="submit" class="save btn btn-default" name= "process_btn" value="switching groups" style="width: 150px;" ><h2>process</h2></button>
+      <div class="col-md-4 col-xs-4 col-sm-4 active" style="vertical-align: middle; height: 100%">
+        <center style="height: 100%; vertical-align: middle;">
+    <button type="submit" class="save btn btn-default" name= "process_btn" value="switching groups" method="post" style="font-size: 15px; font-weight: bold; vertical-align: top; margin-top: 2%;">DISPLAY</button>
+  </center>
+  </div>
   </form>
 
   {% endblock %}
-</ul>
+</div>
 </div>
 </nav>
 
@@ -67,19 +74,87 @@
   var isfirst=0;
   var first=0;
   var frst=0;
-  console.log("dfbnm,");
   document.write('<center><div>')
   document.write('<table border=1 class="top_table">');
   document.write('<tr>');
   var no_of_columns = 5;
-  if('{{query_list.0}}' == 'Bachelors'){
-    no_of_columns = 8;
-  }
-  else{
-    no_of_columns = 7
-  }
 
-  if('{{query_list.0}}' == 'Bachelors'){
+  {% if query_list.level == 'Bachelors' %}
+    no_of_columns = 8;
+  {% endif %}
+    
+  {% if query_list.level == 'Masters' %}
+    no_of_columns = 7;
+  {% endif %}
+  
+  
+  // if({{query_list.level}} == 'Bachelors'){
+  //   {{query_list.level}}
+  //   no_of_columns = 8;
+    
+  // }
+  // else{
+  //   no_of_columns = 7
+  // }
+
+  // if('{{query_list.0}}' == 'Bachelors'){
+  //   for(var k=0;k<no_of_columns;k++){
+      
+  //     //for code no i.e first column
+
+  //     if (isfirst==0){
+  //       document.write('<th width="10%" id="code"> '+"Code"+'</th>');
+  //       isfirst=1;  
+  //     }
+      
+  //     else{
+
+  //       //for second Column subject_Title
+  //       if(k==1){
+  //         document.write('<th width="25%">');
+  //         document.write('<p id="demo1">Title</p>');
+  //       }
+
+  //       //for third Column Exam_type
+  //       else if(k==2){
+  //         document.write('<th width="10%">');
+  //         document.write('<p id="demo2">Exam Type</p>');  
+  //       }
+
+  //       //for 4th column Theory_assessment_final
+  //       else if(k==3){
+  //         document.write('<th width="10%">');
+  //         document.write('<p id="theory_assessment">Theory <br/> Assessment</p>');  
+          
+  //       }
+
+  //       else if (k==4){
+  //         document.write('<th width="10%">');
+  //         document.write('<p id="theory_final">Theory <br/> Final</p>'); 
+  //       }
+        
+
+  //       else if(k==5){
+  //         document.write('<th width="10%">');
+  //         document.write('<p id="practical_assessment">Practical <br/> Assessment</p>');  
+
+  //       }
+  //       else if (k==6){
+  //         document.write('<th width="10%">');
+  //         document.write('<p id="practical_final">Practical <br/> Final</p>'); 
+  //       }
+
+  //       else if(k==7){
+  //         document.write('<th width="15%">');
+  //         document.write('<p id="demo5">Total</p>');
+  //       }
+
+  //       document.write('</th>');
+  //     }         
+  //   }
+  // }
+
+  if('{{query_list.level}}' == 'Bachelors'){
     for(var k=0;k<no_of_columns;k++){
       
       //for code no i.e first column
@@ -137,6 +212,7 @@
   }
 
 
+
   else{
     for(var k=0;k<no_of_columns;k++){
       
@@ -190,16 +266,31 @@
   document.write('</tr>');
 
   
-   {% for subject in  query_list|slice:"1:" %}
-    document.write('<tr>');
+  //  {% for subject in  query_list|slice:"1:" %}
+  //   document.write('<tr>');
    
 
-      {% for field in subject  %}
-      document.write('<td>');
-      document.write('{{ field }}');
-      document.write('</td>');
+  //     {% for field in subject  %}
+  //     document.write('<td>');
+  //     document.write('{{ field }}');
+  //     document.write('</td>');
        
-    {% endfor %}
+  //   {% endfor %}
+
+  //   document.write('</tr>') 
+  // {% endfor %}
+
+  {% for subject_code,subject in  query_list.items %}
+    document.write('<tr>');
+   
+      {% if subject_code != 'level' %}
+
+        {% for subject_field,field in subject.items %}
+        document.write('<td>');
+        document.write('{{ field }}');
+        document.write('</td>');
+        {% endfor %}
+      {% endif %}
 
     document.write('</tr>') 
   {% endfor %}
