masters model updated

--- a/data_entry/templates/data_entry/home.html
+++ b/data_entry/templates/data_entry/home.html
@@ -17,7 +17,7 @@
                 <script src="{% static 'dataEntry/vendor/ajax/libs/popper/1.14.6/umd/popper.min.js' %}"></script>
                 <script src="{% static 'dataEntry/vendor/bootstrap/js/bootstrap.min.js' %}"></script>
 
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="static/dataEntry/css/styles.css">
 </head>
 <body>
     <div class="topbar"></div>
