--- a/data_entry/templates/data_entry/home.html
+++ b/data_entry/templates/data_entry/home.html
@@ -37,7 +37,7 @@
   <div class="container-fluid nav navbar-nav" id="navv" >
     <!-- <div class="nav navbar-nav"> -->
 {% block content %}
-<form class="navbar-form " method="post" novalidate style="width:100%; height: 100%">
+<form class="navbar-form" method="post" novalidate style="width:100%; height: 100%">
     {% csrf_token %}
     {% for k,v in form.items %}
       <div class="col-md-2 col-xs-2 col-sm-2 active">
@@ -45,7 +45,8 @@
         <center>
         <!-- <select id={{v.0}} name={{v.0}} value={{v.0}} type="submit" style="font-size: 15px; font-weight: bold; margin: 5%;"> -->
           <!-- <form method="post" novalidate > -->
-        <select id={{v.header}} name={{v.header}} value={{v.header}} style="font-size: 15px; font-weight: bold; margin: 5%;" type="submit" method ="get">
+        <select id={{v.header}} name={{v.header}} value={{v.header}} style="font-size: 15px; font-weight: bold; margin: 5%;" >
+          <!-- onchange="this.form.submit()" -->
 
         {% for items_key, items in v.items %}
         <option name="{{items}}" value="{{items}}" style="font-size: 14px;" ><button type="submit" class="save btn btn-default" name="{{items}}" value="{{items}}" method="post" style="font-size: 15px; font-weight: bold; vertical-align: top; margin-top: 2%;">{{items}}</button></option>
@@ -74,35 +75,32 @@
 
 </div>
 
-<h1>Search Results</h1>
-
-<ul>
-  {% for city in object_list %}
-    <li>
-      {{ city.name }}, {{ city.state }}
-    </li>
-  {% endfor %}
-</ul>
-
 <script >
+
+{% if not query_list_syllabus.level %}
+
+{% for syllabus_name,syllabus in  query_list_syllabus.items %}
 
   var isfirst=0;
   var first=0;
   var frst=0;
   document.write('<center><div>')
+  document.write('<h4 ">Program : {{syllabus.program_full_name}}, Year: {{syllabus.year}},  Part: {{syllabus.part}}</h4>')
+
   document.write('<table border=1 class="top_table">');
+
   document.write('<tr>');
   var no_of_columns = 5;
 
-  {% if query_list.level == 'Bachelors' %}
+  {% if syllabus.level == 'Bachelors' %}
     no_of_columns = 8;
   {% endif %}
     
-  {% if query_list.level == 'Masters' %}
+  {% if syllabus.level == 'Masters' %}
     no_of_columns = 7;
   {% endif %}
   
-  if('{{query_list.level}}' == 'Bachelors'){
+  if('{{syllabus.level}}' == 'Bachelors'){
     for(var k=0;k<no_of_columns;k++){
       
       //for code no i.e first column
@@ -117,49 +115,40 @@
         //for second Column subject_Title
         if(k==1){
           document.write('<th width="25%" style="font-weight: bold; font-size: 14px; text-align: center; padding-left: 3px; padding-right: 3px;">Title');
-          // document.write('<p id="demo1" style="font-weight: bold; font-size: 14px; text-align: center; vertical-align: middle;">Title</p>');
         }
 
         //for third Column Exam_type
         else if(k==2){
           document.write('<th width="10%" style="font-weight: bold; font-size: 14px; text-align: center;padding-left: 3px; padding-right: 3px;"> Exam Type');
-          // document.write('<p id="demo2" style="font-weight: bold; font-size: 14px; text-align: center;">Exam Type</p>');  
         }
 
         //for 4th column Theory_assessment_final
         else if(k==3){
           document.write('<th width="10%" style="font-weight: bold; font-size: 14px; text-align: center;padding-left: 3px; padding-right: 3px;">Theory <br/> Assessment');
-          // document.write('<p id="theory_assessment">Theory <br/> Assessment</p>');  
           
         }
 
         else if (k==4){
           document.write('<th width="10%" style="font-weight: bold; font-size: 14px; text-align: center;padding-left: 3px; padding-right: 3px;">Theory <br/> Final');
-          // document.write('<p id="theory_final">Theory <br/> Final</p>'); 
         }
         
 
         else if(k==5){
           document.write('<th width="10%" style="font-weight: bold; font-size: 14px; text-align: center;padding-left: 3px; padding-right: 3px;">Practical <br/> Assessment');
-          // document.write('<p id="practical_assessment">Practical <br/> Assessment</p>');  
 
         }
         else if (k==6){
           document.write('<th width="10%" style="font-weight: bold; font-size: 14px; text-align: center;padding-left: 3px; padding-right: 3px;">Practical <br/> Final');
-          // document.write('<p id="practical_final">Practical <br/> Final</p>'); 
         }
 
         else if(k==7){
           document.write('<th width="15%" style="font-weight: bold; font-size: 14px; text-align: center;padding-left: 3px; padding-right: 3px;">Total');
-          // document.write('<p id="demo5">Total</p>');
         }
 
         document.write('</th>');
       }         
     }
   }
-
-
 
   else{
     isfirst =0 ;
@@ -177,32 +166,26 @@
         //for second Column subject_Title
         if(k==1){
           document.write('<th width="25%" width="10%" style="font-weight: bold; font-size: 14px; text-align: center;padding-left: 3px; padding-right: 3px;">Course Code');
-          // document.write('<p id="course_code">Course Code</p>');
         }
 
         //for third Column Exam_type
         else if(k==2){
           document.write('<th width="10%" style="font-weight: bold; font-size: 14px; text-align: center;padding-left: 3px; padding-right: 3px;">Course Title');
-          // document.write('<p id="course_title">Course Title</p>');  
         }
 
         //for 4th column Theory_assessment_final
         else if(k==3){
           document.write('<th width="15%" style="font-weight: bold; font-size: 14px; text-align: center;padding-left: 3px; padding-right: 3px;">Credit');
-          // document.write('<p id="credit">Credit</p>');  
         }
 
         else if(k==4){
           document.write('<th width="15%" style="font-weight: bold; font-size: 14px; text-align: center;padding-left: 3px; padding-right: 3px;">Internal');
-          // document.write('<p id="internal">Internal</p>');  
         }
         else if(k==5){
           document.write('<th width="15%" style="font-weight: bold; font-size: 14px; text-align: center;padding-left: 3px; padding-right: 3px;">External');
-          // document.write('<p id="external">External</p>');  
         }
         else if(k==6){
           document.write('<th width="20%" style="font-weight: bold; font-size: 14px; text-align: center;padding-left: 3px; padding-right: 3px;">Total');
-          // document.write('<p id="total">Total</p>');  
         }
         document.write('</th>');
        
@@ -215,22 +198,7 @@
 
   document.write('</tr>');
 
-  
-  //  {% for subject in  query_list|slice:"1:" %}
-  //   document.write('<tr>');
-   
-
-  //     {% for field in subject  %}
-  //     document.write('<td>');
-  //     document.write('{{ field }}');
-  //     document.write('</td>');
-       
-  //   {% endfor %}
-
-  //   document.write('</tr>') 
-  // {% endfor %}
-
-  {% for subject_code,subject in  query_list.items %}
+  {% for subject_code,subject in  syllabus.items %}
     document.write('<tr>');
    
       {% if subject_code != 'level' %}
@@ -245,7 +213,181 @@
     document.write('</tr>') 
   {% endfor %}
 
+  document.write('</table>')
   document.write('</div></center>')
+  document.write('<br/>   ')
+  document.write('<br/>   ')
+  document.write('<br/>   ')
+
+  {%endfor %}
+{% endif %}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  // var isfirst=0;
+  // var first=0;
+  // var frst=0;
+  // document.write('<center><div>')
+  // document.write('<table border=1 class="top_table">');
+  // document.write('<tr>');
+  // var no_of_columns = 5;
+
+  // {% if query_list.level == 'Bachelors' %}
+  //   no_of_columns = 8;
+  // {% endif %}
+    
+  // {% if query_list.level == 'Masters' %}
+  //   no_of_columns = 7;
+  // {% endif %}
+  
+  // if('{{query_list.level}}' == 'Bachelors'){
+  //   for(var k=0;k<no_of_columns;k++){
+      
+  //     //for code no i.e first column
+
+  //     if (isfirst==0){
+  //       document.write('<th width="10%" id="code" style="font-weight: bold; font-size: 14px; text-align: center; padding-left: 3px; padding-right: 3px;"> '+"Code"+'</th>');
+  //       isfirst=1;  
+  //     }
+      
+  //     else{
+
+  //       //for second Column subject_Title
+  //       if(k==1){
+  //         document.write('<th width="25%" style="font-weight: bold; font-size: 14px; text-align: center; padding-left: 3px; padding-right: 3px;">Title');
+  //       }
+
+  //       //for third Column Exam_type
+  //       else if(k==2){
+  //         document.write('<th width="10%" style="font-weight: bold; font-size: 14px; text-align: center;padding-left: 3px; padding-right: 3px;"> Exam Type');
+  //       }
+
+  //       //for 4th column Theory_assessment_final
+  //       else if(k==3){
+  //         document.write('<th width="10%" style="font-weight: bold; font-size: 14px; text-align: center;padding-left: 3px; padding-right: 3px;">Theory <br/> Assessment');
+          
+  //       }
+
+  //       else if (k==4){
+  //         document.write('<th width="10%" style="font-weight: bold; font-size: 14px; text-align: center;padding-left: 3px; padding-right: 3px;">Theory <br/> Final');
+  //       }
+        
+
+  //       else if(k==5){
+  //         document.write('<th width="10%" style="font-weight: bold; font-size: 14px; text-align: center;padding-left: 3px; padding-right: 3px;">Practical <br/> Assessment');
+
+  //       }
+  //       else if (k==6){
+  //         document.write('<th width="10%" style="font-weight: bold; font-size: 14px; text-align: center;padding-left: 3px; padding-right: 3px;">Practical <br/> Final');
+  //       }
+
+  //       else if(k==7){
+  //         document.write('<th width="15%" style="font-weight: bold; font-size: 14px; text-align: center;padding-left: 3px; padding-right: 3px;">Total');
+  //       }
+
+  //       document.write('</th>');
+  //     }         
+  //   }
+  // }
+
+
+
+  // else{
+  //   isfirst =0 ;
+  //   for(var k=0;k<no_of_columns;k++){
+      
+  //     //for code no i.e first column
+
+  //     if (isfirst==0){
+  //       document.write('<th width="10%" id="sn" width="10%" style="font-weight: bold; font-size: 14px; text-align: center;padding-left: 3px; padding-right: 3px;" > '+"S.N."+'</th>');
+  //       isfirst=1;  
+  //     }
+      
+  //     else{
+
+  //       //for second Column subject_Title
+  //       if(k==1){
+  //         document.write('<th width="25%" width="10%" style="font-weight: bold; font-size: 14px; text-align: center;padding-left: 3px; padding-right: 3px;">Course Code');
+  //       }
+
+  //       //for third Column Exam_type
+  //       else if(k==2){
+  //         document.write('<th width="10%" style="font-weight: bold; font-size: 14px; text-align: center;padding-left: 3px; padding-right: 3px;">Course Title');
+  //       }
+
+  //       //for 4th column Theory_assessment_final
+  //       else if(k==3){
+  //         document.write('<th width="15%" style="font-weight: bold; font-size: 14px; text-align: center;padding-left: 3px; padding-right: 3px;">Credit');
+  //       }
+
+  //       else if(k==4){
+  //         document.write('<th width="15%" style="font-weight: bold; font-size: 14px; text-align: center;padding-left: 3px; padding-right: 3px;">Internal');
+  //       }
+  //       else if(k==5){
+  //         document.write('<th width="15%" style="font-weight: bold; font-size: 14px; text-align: center;padding-left: 3px; padding-right: 3px;">External');
+  //       }
+  //       else if(k==6){
+  //         document.write('<th width="20%" style="font-weight: bold; font-size: 14px; text-align: center;padding-left: 3px; padding-right: 3px;">Total');
+  //       }
+  //       document.write('</th>');
+       
+  //     }         
+  //   }
+
+  // }
+
+  // //for values of above header rows 
+
+  // document.write('</tr>');
+
+  // {% for subject_code,subject in  query_list.items %}
+  //   document.write('<tr>');
+   
+  //     {% if subject_code != 'level' %}
+
+  //       {% for subject_field,field in subject.items %}
+  //       document.write('<td style="font-size: 14px; text-align: center;">');
+  //       document.write('{{ field }}');
+  //       document.write('</td>');
+  //       {% endfor %}
+  //     {% endif %}
+
+  //   document.write('</tr>') 
+  // {% endfor %}
+
+  // document.write('</div></center>')
 
 </script>
 </body>
