--- a/data_entry/templates/data_entry/home.html
+++ b/data_entry/templates/data_entry/home.html
@@ -109,7 +109,7 @@
       //for code no i.e first column
 
       if (isfirst==0){
-        document.write('<th width="10%" id="code" style="font-weight: bold; font-size: 14px; text-align: center; padding-left: 3px; padding-right: 3px;"> '+"Code"+'</th>');
+        document.write('<th width="15dp" id="code" style="font-weight: bold; font-size: 14px; text-align: center; padding-left: 3px; padding-right: 3px;"> '+"Code"+'</th>');
         isfirst=1;  
       }
       
@@ -117,12 +117,12 @@
 
         //for second Column subject_Title
         if(k==1){
-          document.write('<th width="25%" style="font-weight: bold; font-size: 14px; text-align: center; padding-left: 3px; padding-right: 3px;">Title');
+          document.write('<th width="25dp" style="font-weight: bold; font-size: 14px; text-align: center; padding-left: 3px; padding-right: 3px;">Title');
         }
 
         //for third Column Exam_type
         else if(k==2){
-          document.write('<th width="10%" style="font-weight: bold; font-size: 14px; text-align: center;padding-left: 3px; padding-right: 3px;"> Exam Type');
+          document.write('<th width="10" style="font-weight: bold; font-size: 14px; text-align: center;padding-left: 3px; padding-right: 3px;"> Exam Type');
         }
 
         //for 4th column Theory_assessment_final
@@ -160,7 +160,7 @@
       //for code no i.e first column
 
       if (isfirst==0){
-        document.write('<th width="10%" id="sn" width="10%" style="font-weight: bold; font-size: 14px; text-align: center;padding-left: 3px; padding-right: 3px;" > '+"S.N."+'</th>');
+        document.write('<th width="10dp" id="sn" width="10%" style="font-weight: bold; font-size: 14px; text-align: center;padding-left: 3px; padding-right: 3px;" > '+"S.N."+'</th>');
         isfirst=1;  
       }
       
@@ -168,7 +168,7 @@
 
         //for second Column subject_Title
         if(k==1){
-          document.write('<th width="25%" width="10%" style="font-weight: bold; font-size: 14px; text-align: center;padding-left: 3px; padding-right: 3px;">Course Code');
+          document.write('<th width="25dp" width="10%" style="font-weight: bold; font-size: 14px; text-align: center;padding-left: 3px; padding-right: 3px;">Course Code');
         }
 
         //for third Column Exam_type
@@ -206,7 +206,7 @@
   {% for subject_code,subject in  syllabus.items %}
     document.write('<tr>');
    
-      {% if subject_code != 'level' %}
+      {% if subject_code != 'level' and subject_code != 'elective_1' and subject_code != 'elective_2' and subject_code != 'elective_3'%}
 
         {% for subject_field,field in subject.items %}
         document.write('<td style="font-size: 14px; text-align: center;">');
@@ -239,7 +239,160 @@
   document.write('<br/>   ')
   document.write('<br/>   ')
 
-  {%endfor %}
+    {% for subject_code,subject in  syllabus.items %}
+
+          {% if subject_code == 'elective_1' or subject_code == 'elective_2' or subject_code == 'elective_3'%}
+          {% if subject|length > 0 %}
+            var isfirst=0;
+            var first=0;
+            var frst=0;
+            document.write('<center><div>')
+            document.write('<h4 ">Program : {{subject_code}}</h4>')
+
+            document.write('<table border=1 class="top_table">');
+            document.write('<thead>')
+
+            document.write('<tr>');
+            var no_of_columns = 5;
+
+            {% if syllabus.level == 'Bachelors' %}
+              no_of_columns = 8;
+            {% endif %}
+              
+            {% if syllabus.level == 'Masters' %}
+              no_of_columns = 7;
+            {% endif %}
+            
+            if('{{syllabus.level}}' == 'Bachelors'){
+              for(var k=0;k<no_of_columns;k++){
+                
+                //for code no i.e first column
+
+                if (isfirst==0){
+                  document.write('<th width="15dp" id="code" style="font-weight: bold; font-size: 14px; text-align: center; padding-left: 3px; padding-right: 3px;"> '+"Code"+'</th>');
+                  isfirst=1;  
+                }
+                
+                else{
+
+                  //for second Column subject_Title
+                  if(k==1){
+                    document.write('<th width="25dp" style="font-weight: bold; font-size: 14px; text-align: center; padding-left: 3px; padding-right: 3px;">Title');
+                  }
+
+                  //for third Column Exam_type
+                  else if(k==2){
+                    document.write('<th width="10" style="font-weight: bold; font-size: 14px; text-align: center;padding-left: 3px; padding-right: 3px;"> Exam Type');
+                  }
+
+                  //for 4th column Theory_assessment_final
+                  else if(k==3){
+                    document.write('<th width="10%" style="font-weight: bold; font-size: 14px; text-align: center;padding-left: 3px; padding-right: 3px;">Theory <br/> Assessment');
+                    
+                  }
+
+                  else if (k==4){
+                    document.write('<th width="10%" style="font-weight: bold; font-size: 14px; text-align: center;padding-left: 3px; padding-right: 3px;">Theory <br/> Final');
+                  }
+                  
+
+                  else if(k==5){
+                    document.write('<th width="10%" style="font-weight: bold; font-size: 14px; text-align: center;padding-left: 3px; padding-right: 3px;">Practical <br/> Assessment');
+
+                  }
+                  else if (k==6){
+                    document.write('<th width="10%" style="font-weight: bold; font-size: 14px; text-align: center;padding-left: 3px; padding-right: 3px;">Practical <br/> Final');
+                  }
+
+                  else if(k==7){
+                    document.write('<th width="15%" style="font-weight: bold; font-size: 14px; text-align: center;padding-left: 3px; padding-right: 3px;">Total');
+                  }
+
+                  document.write('</th>');
+                }         
+              }
+            }
+
+            else{
+              isfirst =0 ;
+              for(var k=0;k<no_of_columns;k++){
+                
+                //for code no i.e first column
+
+                if (isfirst==0){
+                  document.write('<th width="10dp" id="sn" width="10%" style="font-weight: bold; font-size: 14px; text-align: center;padding-left: 3px; padding-right: 3px;" > '+"S.N."+'</th>');
+                  isfirst=1;  
+                }
+                
+                else{
+
+                  //for second Column subject_Title
+                  if(k==1){
+                    document.write('<th width="25dp" width="10%" style="font-weight: bold; font-size: 14px; text-align: center;padding-left: 3px; padding-right: 3px;">Course Code');
+                  }
+
+                  //for third Column Exam_type
+                  else if(k==2){
+                    document.write('<th width="10%" style="font-weight: bold; font-size: 14px; text-align: center;padding-left: 3px; padding-right: 3px;">Course Title');
+                  }
+
+                  //for 4th column Theory_assessment_final
+                  else if(k==3){
+                    document.write('<th width="15%" style="font-weight: bold; font-size: 14px; text-align: center;padding-left: 3px; padding-right: 3px;">Credit');
+                  }
+
+                  else if(k==4){
+                    document.write('<th width="15%" style="font-weight: bold; font-size: 14px; text-align: center;padding-left: 3px; padding-right: 3px;">Internal');
+                  }
+                  else if(k==5){
+                    document.write('<th width="15%" style="font-weight: bold; font-size: 14px; text-align: center;padding-left: 3px; padding-right: 3px;">External');
+                  }
+                  else if(k==6){
+                    document.write('<th width="20%" style="font-weight: bold; font-size: 14px; text-align: center;padding-left: 3px; padding-right: 3px;">Total');
+                  }
+                  document.write('</th>');
+                 
+                }         
+              }
+
+            }
+
+            //for values of above header rows 
+
+            document.write('</tr>');
+            document.write('</thead>');
+
+            document.write('<tbody>');
+
+            {% for subject_code_1,subject_1 in  subject.items %}
+              document.write('<tr>');
+             
+                
+
+                  {% for subject_field,field in subject_1.items %}
+                  document.write('<td style="font-size: 14px; text-align: center;">');
+                  document.write('{{ field }}');
+                  document.write('</td>');
+                  {% endfor %}
+
+              document.write('</tr>') 
+             
+
+            {% endfor %}
+            document.write('</tbody>');
+            document.write('</table>')
+            document.write('</div></center>')
+            document.write('<br/>   ')
+            document.write('<br/>   ')
+            document.write('<br/>   ')
+
+
+{% endif %}
+{% endif %}
+{% endfor %}
+
+
+  {% endfor %}
 {% endif %}
 
 
